# Root-Spector

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md  templates.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  documentation.yml  feature.yml  general.yml
.github/templates/: bug_report.yml  config.yml  documentation.yml  feature.yml  pull_request_template.md  templates.md
.github/workflows/: ci.yml
backend/: __init__.py  main.py
config/: regras_bioprocesso.yaml
data/simulacao_causa_raiz/: README.md
data/simulacao_causa_raiz/csv/: aprovado_01_lote_ideal_alta_estabilidade.csv  (+14 more)
deploy/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: PRD.md  apresentacao.html  apresentacao.md  cenarios-de-uso.md  checklist-fluxo.html  diagrama-fluxo.md  fluxo-tecnico-agente.html  gitflow.md  mapeamento-processo.html  openapi.yaml  prompts.md
docs/demo/: gabarito-testes.md
frontend/: DESIGN.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  parametroLabel.ts  statusBadge.ts
root_cause_agent/: __init__.py  config.py  fake_llm.py  graph.py  main.py  models.py  nodes.py  reports.py  state.py  tools.py
scripts/: setup_github.py
slides/: apresentacao.md
specs/: ci-cd.md  design.md  gitflow.md  product.md  requirements.md  structure.md  tech.md
tests/: conftest.py  test_backend.py  test_config.py  test_graph.py  test_tools.py
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/fixtures/: biotecpredict_teste.db
(+8 files in other folders)
