[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "root-spector"
version = "0.1.0"
description = "Agente LangGraph que investiga a causa raiz de nao-conformidades de bioprocesso, complementar ao BiotecPredict"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-groq>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.9",
    "typing-extensions>=4.12",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "openapi-spec-validator>=0.7",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["root_cause_agent*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
